--- a/style.css
+++ b/style.css
@@ -609,9 +609,11 @@ progress {
 }
 
 .img-logo {
-  max-width: 15%;
+  max-width: 13%;
   height: auto;
   float: right;
+  object-fit: scale-down;
+  display: inline-block;
 }
 
 .img-thumbnail {
